[package]
name = "router_web"
version = "1.2.0"
authors = ["karth <karthickps.ai@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-identity = "0.1.0"
actix-web = "1.0.8"
actix-cors = "0.1.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.0", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.10"
r2d2 = "0.8"
env_logger = "0.6"
derive_more = "0.15.0"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
easy_password  = "0.1.2"